# udp-chat-app

./: client.py  pyproject.toml  server.py  test.py
modules/: check_connection.py  heart_beat_task.py  receive_message_task.py  send_message.py  user.py  utils.py
packets/: ack.py  answer.py  auth.py  error.py  exist.py  green_notify.py  heartbeat.py  information.py  message.py  non_exist.py  notify.py  opcode.py  question.py  yellow_notify.py
