[tool.poetry]
name = "csc445-project3"
version = "1.0.0"
description = "?"
authors = ["Mint <developer@chocomint.dev>"]
maintainers = ["Mint <developer@chocomint.dev>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/lunarmint/csc445-project3"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
black = ">=22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
